--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,3 @@
-baseURL = 'https://example.org/'
-languageCode = 'en-us'
+baseURL = 'https://digopaulino.github.io/personal-website/'
+languageCode = 'en'
 title = 'Rodrigo Paulino'
